feat: install camera SDK during driver installation

--- a/ansible/roles/tier4_hdr_camera_driver/tasks/main.yaml
+++ b/ansible/roles/tier4_hdr_camera_driver/tasks/main.yaml
@@ -3,17 +3,30 @@
     url: "{{ camera_driver_repo }}"
   register: github_api_return_info
 
-- name: Parse download URL
+- name: Parse download URL for driver
   loop: "{{ github_api_return_info.json.assets }}"
   set_fact:
-    deb_download_url: "{{ item.browser_download_url }}"
-    deb_name: "{{ item.name }}"
+    driver_deb_download_url: "{{ item.browser_download_url }}"
+    driver_deb_name: "{{ item.name }}"
   when: "item.name | regex_search('tier4-camera-gmsl_(.+)_arm64.deb')"
 
-- name: Download deb file from public repo
+- name: Parse download URL for SDK
+  loop: "{{ github_api_return_info.json.assets }}"
+  set_fact:
+    sdk_deb_download_url: "{{ item.browser_download_url }}"
+    sdk_deb_name: "{{ item.name }}"
+  when: "item.name | regex_search('t4cam_sdk-(.+)-rqx58g.deb')"
+
+- name: Download driver deb file from public repo
   ansible.builtin.get_url:
-    url: "{{ deb_download_url }}"
-    dest: "{{ camera_driver_download_dir }}/{{ deb_name }}"
+    url: "{{ driver_deb_download_url }}"
+    dest: "{{ camera_driver_download_dir }}/{{ driver_deb_name }}"
+    mode: "0644"
+
+- name: Download SDK deb file from public repo
+  ansible.builtin.get_url:
+    url: "{{ sdk_deb_download_url }}"
+    dest: "{{ camera_driver_download_dir }}/{{ sdk_deb_name }}"
     mode: "0644"
 
 - name: Check driver is installed
@@ -23,15 +36,19 @@
   check_mode: true
   register: is_driver_installed
 
-- name: Setup camera driver
+- name: Setup camera driver and SDK
   block:
-    - name: install from deb file
+    - name: install driver from deb file
       ansible.builtin.apt:
-        deb: "{{ camera_driver_download_dir }}/{{ deb_name }}"
+        deb: "{{ camera_driver_download_dir }}/{{ driver_deb_name }}"
         state: present
     - name: post process
       shell:
         cmd: |
           /opt/nvidia/jetson-io/config-by-hardware.py -n 2="Tier4 ISX021 IMX490 GMSL2 Camera Device Tree Overlay"
+    - name: install SDK from deb file
+      ansible.builtin.apt:
+        deb: "{{ camera_driver_download_dir }}/{{ sdk_deb_name }}"
+        state: present
   when: is_driver_installed is not succeeded
   become: true
