--- a/ansible/roles/cyclonedds/defaults/main.yaml
+++ b/ansible/roles/cyclonedds/defaults/main.yaml
@@ -1,4 +1,3 @@
 cyclonedds:
-  network_interface_address:
-    - eth1
+  network_interface_address: eth1
   minimum_socket_receive_buffer_size: 20MB
