chore: update readme
(check camera driver install, separate build command)

Signed-off-by: Akihito Ohsato <aohsato@gmail.com>

--- a/ansible/setup.yaml
+++ b/ansible/setup.yaml
@@ -1,8 +1,14 @@
 - hosts: localhost
+  vars_prompt:
+    - name: prompt_install_camera_driver
+      prompt: |-
+        [Warning] Do you want to install/update the TIER IV camera driver? [y/N]
+      private: false
   roles:
     - role: autoware
     - role: cuda
     - role: cyclonedds
     - role: docker
     - role: tier4_hdr_camera_driver
+      when: prompt_install_camera_driver == 'y'
     - role: vcstool
