style(ansible): fix lint error
Signed-off-by: wep21 <daisuke.nishimatsu1021@gmail.com>

--- a/ansible/roles/cyclonedds/tasks/main.yaml
+++ b/ansible/roles/cyclonedds/tasks/main.yaml
@@ -29,7 +29,7 @@
   with_items: "{{ cyclonedds.network_interface_address }}"
 
 - name: Add kernel parameter config
-  sysctl:
+  ansible.posix.sysctl:
     name: "{{ item.key }}"
     value: "{{ item.value }}"
     state: present
