fix(setup.yaml): fotfix playbook error

--- a/ansible/setup.yaml
+++ b/ansible/setup.yaml
@@ -1,5 +1,5 @@
 - name: Setup perception ECU
-- hosts: localhost
+  hosts: localhost
   vars_prompt:
     - name: prompt_install_camera_driver
       prompt: |-
