fix(docker/Dockerfile): handle CI/CD error
Signed-off-by: Manato HIRABAYASHI <manato.hirabayashi@tier4.jp>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,6 +6,7 @@ ARG L4T_VERSION=$L4T_RELEASE.$L4T_REVISION_MAJOR.$L4T_REVISION_MINOR
 FROM dustynv/ros:galactic-ros-base-l4t-r$L4T_VERSION
 
 # Fix GPG key to support recent key update
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN wget -q -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null \
     && echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ bionic main' | tee /etc/apt/sources.list.d/kitware.list >/dev/null \
     && sed -i 's|deb https://apt.kitware.com/ubuntu/ bionic main|#&|g' /etc/apt/sources.list
