--- a/ansible/setup.yaml
+++ b/ansible/setup.yaml
@@ -13,6 +13,7 @@
     - role: cyclonedds
     - role: docker
     - role: vcstool
+    - role: ros2
+    - role: calibration_tools
     - role: tier4_hdr_camera_driver
       when: prompt_install_camera_driver == 'y'
-    - role: ros2
