feat: add a role to install ptp4l client
Signed-off-by: Manato HIRABAYASHI <manato.hirabayashi@tier4.jp>

--- a/ansible/setup.yaml
+++ b/ansible/setup.yaml
@@ -2,6 +2,7 @@
   hosts: localhost
   vars:
     - ros_distro: humble
+    - ptp4l_client_interface: eth1
   vars_prompt:
     - name: prompt_install_camera_driver
       prompt: |-
@@ -16,3 +17,4 @@
     - role: tier4_hdr_camera_driver
       when: prompt_install_camera_driver == 'y'
     - role: ros2
+    - role: ptp4l_client
