feat: udpate cyclodds setting
Signed-off-by: Manato HIRABAYASHI <manato.hirabayashi@tier4.jp>

--- a/ansible/roles/cyclonedds/tasks/main.yaml
+++ b/ansible/roles/cyclonedds/tasks/main.yaml
@@ -26,7 +26,8 @@
     enabled: true
     masked: false
   become: true
-  with_items: "{{ cyclonedds.network_interface_address }}"
+  when: item == "lo"
+  with_items: "{{ network_config }}"
 
 - name: Add kernel parameter config
   ansible.posix.sysctl:
