feat: udpate roles to insert `source` operations in user's .bashrc
Signed-off-by: Manato HIRABAYASHI <manato.hirabayashi@tier4.jp>

--- a/ansible/roles/autoware/tasks/main.yaml
+++ b/ansible/roles/autoware/tasks/main.yaml
@@ -8,3 +8,11 @@
     block: |
       export ROS_DOMAIN_ID={{ ros_domain_id }}
   become: true
+
+- name: Add sourcing command in user's bashrc
+  ansible.builtin.blockinfile:
+    path: "{{ ansible_env.HOME }}/.bashrc"
+    state: present
+    marker: "# {mark} autoware"
+    block: |
+      source {{ autoware_env_dir }}/autoware.env
