--- a/ansible/roles/tier4_hdr_camera_driver/defaults/main.yaml
+++ b/ansible/roles/tier4_hdr_camera_driver/defaults/main.yaml
@@ -1,2 +1,3 @@
 camera_driver_repo: https://api.github.com/repos/tier4/tier4_automotive_hdr_camera/releases/latest
 camera_driver_download_dir: /tmp
+exposure_time: 11000
