feat(edge-auto-jetson): Edge.Auto release (#27)
* Feat: humble (#21)

* feat: add a role to build humble natively

Signed-off-by: Manato HIRABAYASHI <manato.hirabayashi@tier4.jp>

* docs: update readme and figure

Signed-off-by: Manato HIRABAYASHI <manato.hirabayashi@tier4.jp>

* style(pre-commit): autofix

---------

Signed-off-by: Manato HIRABAYASHI <manato.hirabayashi@tier4.jp>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

* docs(readme): new perception launch system (#9)

* change: enable x11 forwarding for launch via ssh

Signed-off-by: Akihito Ohsato <aohsato@gmail.com>

* docs: modify readme for new launch system

Signed-off-by: Akihito Ohsato <aohsato@gmail.com>

* style: update readme

Signed-off-by: Akihito Ohsato <aohsato@gmail.com>

* style: rename repos file

Signed-off-by: Akihito OHSATO <aohsato@gmail.com>

* add: experimental.repos

Signed-off-by: Akihito OHSATO <aohsato@gmail.com>

* docs: modify readme for new launch system

Signed-off-by: Akihito Ohsato <aohsato@gmail.com>

* style: update readme

Signed-off-by: Akihito Ohsato <aohsato@gmail.com>

* style: rename repos file

Signed-off-by: Akihito OHSATO <aohsato@gmail.com>

* add: experimental.repos

Signed-off-by: Akihito OHSATO <aohsato@gmail.com>

* modify: update commands on README.md

Signed-off-by: Akihito Ohsato <aohsato@gmail.com>

---------

Signed-off-by: Akihito Ohsato <aohsato@gmail.com>
Signed-off-by: Akihito OHSATO <aohsato@gmail.com>

* fix(repo): edge-auto repositories (#24)

* feat: update version of autoware.universe (#23)

* feat: update version of autoware.universe

Signed-off-by: Manato HIRABAYASHI <manato.hirabayashi@tier4.jp>

* docs: update compile option on README

Signed-off-by: Manato HIRABAYASHI <manato.hirabayashi@tier4.jp>

---------

Signed-off-by: Manato HIRABAYASHI <manato.hirabayashi@tier4.jp>

* feat(repos/ansible): add calibration_tools s

--- a/ansible/setup.yaml
+++ b/ansible/setup.yaml
@@ -1,9 +1,22 @@
 - name: Setup perception ECU
   hosts: localhost
+  vars:
+    - ros_distro: humble
+    - network_config:
+        ros:
+          interface_address: 192.168.2.2
+          interface_name: eth1
+        dhcp:
+          interface_name: eth0
+    - ptp4l_client_interface: eth1
   vars_prompt:
     - name: prompt_install_camera_driver
       prompt: |-
         [Warning] Do you want to install/update the TIER IV camera driver? [y/N]
+      private: false
+    - name: prompt_configure_network
+      prompt: |-
+        [Warning] Do you want to configure the network? This configuration may overwrite the IP address of the specific network interface [y/N]
       private: false
   roles:
     - role: autoware
@@ -11,5 +24,13 @@
     - role: cyclonedds
     - role: docker
     - role: vcstool
+    - role: calibration_tools
     - role: tier4_hdr_camera_driver
       when: prompt_install_camera_driver == 'y'
+    - role: ros2
+    - role: ptp4l_client
+      when: prompt_configure_network
+    - role: enlarge_txqueue
+      when: prompt_configure_network
+    - role: netplan
+      when: prompt_configure_network
