--- a/ansible/setup.yaml
+++ b/ansible/setup.yaml
@@ -29,8 +29,8 @@
       when: prompt_install_camera_driver == 'y'
     - role: ros2
     - role: ptp4l_client
-      when: prompt_configure_network
+      when: prompt_configure_network == 'y'
     - role: enlarge_txqueue
-      when: prompt_configure_network
+      when: prompt_configure_network == 'y'
     - role: netplan
-      when: prompt_configure_network
+      when: prompt_configure_network == 'y'
