--- a/ansible/roles/ros2/tasks/main.yaml
+++ b/ansible/roles/ros2/tasks/main.yaml
@@ -110,6 +110,7 @@
 - name: Install OpenCV
   ansible.builtin.command:
     cmd: "{{ opencv_install_script }} https://nvidia.box.com/shared/static/2hssa5g3v28ozvo3tc3qwxmn78yerca9.gz OpenCV-4.5.0-aarch64.tar.gz"
+  become: true
 
 - name: Build ROS2 Humble
   ansible.builtin.command:
@@ -118,6 +119,7 @@
     ROS_DISTRO: "{{ ros_distro }}"
     ROS_PKG: ros_base
     ROS_ROOT: "/opt/ros/{{ ros_distro }}"
+  become: true
 
 - name: Install extra edge-auto-jetson dependency
   ansible.builtin.apt:
