change network configuration and run entire setup

--- a/ansible/setup.yaml
+++ b/ansible/setup.yaml
@@ -5,15 +5,15 @@
     - network_config:
         ros:
           interface_address: 192.168.2.2
-          interface_name: eth1
+          interface_name: mgbe0
         dhcp:
-          interface_name: eth0
-    - ptp4l_client_interface: eth1
+          interface_name: mgbe1
+    - ptp4l_client_interface: mgbe0
   vars_prompt:
-    - name: prompt_install_camera_driver
-      prompt: |-
-        [Warning] Do you want to install/update the TIER IV camera driver? [y/N]
-      private: false
+#    - name: prompt_install_camera_driver
+#      prompt: |-
+#        [Warning] Do you want to install/update the TIER IV camera driver? [y/N]
+#      private: false
     - name: prompt_configure_network
       prompt: |-
         [Warning] Do you want to configure the network? This configuration may overwrite the IP address of the specific network interface [y/N]
@@ -22,11 +22,11 @@
     - role: autoware
     - role: cuda
     - role: cyclonedds
-    - role: docker
+#    - role: docker
     - role: vcstool
     - role: calibration_tools
-    - role: tier4_hdr_camera_driver
-      when: prompt_install_camera_driver == 'y'
+#    - role: tier4_hdr_camera_driver
+#      when: prompt_install_camera_driver == 'y'
     - role: ros2
     - role: ptp4l_client
       when: prompt_configure_network == 'y'
