checkpoint before testing at128 and 2 cameras example

--- a/camera_setup.yaml
+++ b/camera_setup.yaml
@@ -1,8 +1,8 @@
-image_width: null
-image_height: null
-frame_rate: null
-phase: null
-gpio: null
-cpu_core_id: null
-video_device: null
-output_encoding: null
+image_width: 1920
+image_height: 1280
+frame_rate: 10.0
+phase: 30.0
+gpio: 51
+cpu_core_id: 6
+video_device: "/dev/video0"
+output_encoding: "rgb8"
